--- a/css/board.css
+++ b/css/board.css
@@ -1,21 +1,28 @@
 .tile {
-  aspect-ratio: 1/1;
   border: 1px solid rgba(227, 227, 227, 0.2);
-  min-width: 3rem;
+  height: 3rem;
 }
 
-.W {
+.tile-space {
+  background: antiquewhite;
+}
+
+.tile-wall {
   background-color: rosybrown;
 }
 
-.B {
+.entity-block {
   background-color: dodgerblue;
 }
 
-.G {
+.tile-goal {
   background-color: slategrey;
 }
 
-.P {
+.entity-player {
   background-color: rebeccapurple;
+}
+
+.entity-block-goal {
+  background-color: color-mix(in hsl, #1E90FFFF, #708090FF);
 }
