--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
   overflow-x: hidden;
 
   /* Optional: neutral background */
-  background-color: #fafafa;
+  background-color: #e1e1e1;
   color: #222;
 }
 
@@ -30,17 +30,35 @@ main {
   padding: 2rem;
   width: 100%;
   height: 100vh;
-  display: grid;
-  grid-template-columns: 2fr 1fr;
+  display: flex;
 
   .boardSection {
-    border: #222222 solid 1px;
     margin-right: 3rem;
-    width: fit-content;
-    height: fit-content;
+    width: calc(100vw/3 * 2);
+    padding: 3rem;
+    background-color: whitesmoke;
+    border-radius: 12px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .instructionsSection {
+    width: calc(100vw/3);
+  }
+}
 
+button {
+  border: #6f7d94;
+  background: #6c7789 !important;
+  color: #e9e9e9;
+  padding: 1rem 2rem;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: bold;
+  border-radius: 12px;
+  box-shadow: 2px 2px 4px #6f7d94;
+
+  &:hover {
+    border: #8b97ad;
+    background: #8993a3 !important;
   }
 }
