--- a/css/board.css
+++ b/css/board.css
@@ -1,28 +1,46 @@
 .tile {
-  border: 1px solid rgba(227, 227, 227, 0.2);
-  height: 3rem;
+  height: auto;
+  background-color: #917959;
 }
 
 .tile-space {
-  background: antiquewhite;
+  background-color: #917959;
 }
 
 .tile-wall {
   background-color: rosybrown;
+  border: 0.75rem solid #956f6f;
+  box-shadow: inset 0 0 3px 1px #956f6f, inset 0 0 2px 1px #00000091;
 }
 
 .entity-block {
-  background-color: dodgerblue;
+  background-image: url("/images/box.svg");
+  background-attachment: inherit;
+  background-size: cover;
+  background-origin: border-box;
+  background-repeat: round;
 }
 
 .tile-goal {
-  background-color: slategrey;
+  background-image: url("/images/goal.svg");
+  background-attachment: inherit;
+  background-size: cover;
+  background-origin: border-box;
+  background-repeat: round;
 }
 
 .entity-player {
-  background-color: rebeccapurple;
+  background-image: url("/images/blob.svg");
+  background-attachment: inherit;
+  background-size: cover;
+  background-origin: border-box;
+  background-repeat: round;
 }
 
 .entity-block-goal {
-  background-color: color-mix(in hsl, #1E90FFFF, #708090FF);
+  background-image: url("/images/box.svg");
+  background-attachment: inherit;
+  background-size: cover;
+  background-origin: border-box;
+  background-repeat: round;
 }
